<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgfundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fundo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/liga2" />

    <ImageView
        android:id="@+id/imgtitulo"
        android:layout_width="129dp"
        android:layout_height="177dp"
        android:layout_marginBottom="576dp"
        android:contentDescription="@string/titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ligalogo" />

    <Button
        android:id="@+id/btnflash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/flash"
        app:layout_constraintEnd_toEndOf="@+id/btnciborgue"
        app:layout_constraintTop_toBottomOf="@+id/btnciborgue" />

    <Button
        android:id="@+id/btnciborgue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:text="@string/ciborgue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnbatman" />

    <Button
        android:id="@+id/btnbatman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:text="@string/batman"
        app:layout_constraintEnd_toEndOf="@+id/btnmulher"
        app:layout_constraintStart_toStartOf="@+id/btnmulher"
        app:layout_constraintTop_toBottomOf="@+id/btnaquaman" />

    <Button
        android:id="@+id/btnaquaman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="33dp"
        android:text="@string/aquaman"
        app:layout_constraintStart_toEndOf="@+id/btnmulher"
        app:layout_constraintTop_toTopOf="@+id/btnmulher" />

    <Button
        android:id="@+id/btnmulher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="47dp"
        android:text="@string/mulher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgtitulo" />

</androidx.constraintlayout.widget.ConstraintLayout>