<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDA1A1"
    tools:context=".aflash">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="462dp"
        android:layout_height="773dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/bgflash"
        app:layout_constraintBottom_toBottomOf="@+id/flashpers"
        app:layout_constraintEnd_toEndOf="@+id/txtflash"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361"
        app:srcCompat="@drawable/flashbg" />

    <TextView
        android:id="@+id/txtflash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="7dp"
        android:text="@string/flash"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/espflash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtdescflash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/descflash"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/flashpers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/flashpers"
        app:layout_constraintTop_toBottomOf="@+id/espflash" />

    <TextView
        android:id="@+id/espflash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="60dp"
        android:text="@string/espflash"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/txtdescflash"
        app:layout_constraintEnd_toEndOf="@+id/txtflash"
        app:layout_constraintTop_toBottomOf="@+id/txtflash" />

    <ImageView
        android:id="@+id/flashpers"
        android:layout_width="178dp"
        android:layout_height="0dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdescflash"
        app:srcCompat="@drawable/flashpersonagem" />

</androidx.constraintlayout.widget.ConstraintLayout>